[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "bs4==0.0.2",
    "gradio==4.44.1",
    "langchain==0.3.1",
    "langchain-chroma==0.1.4",
    "langchain-community==0.3.1",
    "langchain-google-genai==2.0.0",
    "langchain-groq==0.2.0",
    "langchain-ollama==0.2.0",
    "langchain-openai==0.2.1",
    "langgraph==0.2.34",
    "python-dotenv==1.0.1",
    "wikipedia==1.4.0",
]
